--- a/gb/23/4/9/n13968878.md
+++ b/gb/23/4/9/n13968878.md
@@ -1,73 +1,63 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>112年洄嘉青年FUN心玩社区计划启动暨说明</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/04/id13968879-608447-600x400.jpg" />
 <h6>大合照。（嘉义市政府提供）
 </h6>
 <hr>
-<p>【大纪元2023年04月09日讯】（大纪元记者李撷璎台湾<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%98%89%E4%B9%89.md#1">嘉义</a>报导）嘉义市政府以<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B4%84%E5%98%89%E9%9D%92%E5%B9%B4.md#1">洄嘉青年</a>FUN心玩社区计划带领在地青年学子进入社区发展协会，透过年轻的热诚与专长，协力和社区发展协会发现在地课题并彰显地方特色，于9日举办“112年回嘉青年－FUN心玩社区”计划启动暨说明记者会。</p>
+<p>【大纪元2023年04月09日讯】（大纪元记者李撷璎台湾嘉义报导）嘉义市政府以洄嘉青年FUN心玩社区计划带领在地青年学子进入社区发展协会，透过年轻的热诚与专长，协力和社区发展协会发现在地课题并彰显地方特色，于9日举办“112年回嘉青年－FUN心玩社区”计划启动暨说明记者会。</p>
 <p>本年度补助计划将公开征选青年优质企划案，经评选核定通过的青年团队，提供每队团队行动金最高8万元，总计80万元行动补助金，且于最终成果选拔优良团队，以年轻人的创意为社区创造亮点并提升量能，共创跨世代新价值。</p>
-<figure id="attachment_13968880" aria-describedby="caption-attachment-13968880" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13968880-608448.jpg"><img class="size-large wp-image-13968880" src="https://i.epochtimes.com/assets/uploads/2023/04/id13968880-608448-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13968880" class="wp-caption-text">市长黄敏惠观赏社区青年执行成果。<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%98%89%E4%B9%89.md#1">嘉义</a>市政府提供）</figcaption></figure>
-<figure id="attachment_13968881" aria-describedby="caption-attachment-13968881" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13968881-608449.jpg"><img class="size-large wp-image-13968881" src="https://i.epochtimes.com/assets/uploads/2023/04/id13968881-608449-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13968881" class="wp-caption-text">市长黄敏惠观赏社区青年执行成果。（嘉义市政府提供）</figcaption></figure>
-<p>黄敏惠市长表示，“回嘉青年－FUN心玩社区”计划已经执行了两年，今年度将延续第一届与第二届<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B4%84%E5%98%89%E9%9D%92%E5%B9%B4.md#1">洄嘉青年</a>计划的精神，以及有事青年节理想，打造跨越青年文化交流平台，建立社区发展协会与在地青年连结，并关注更多在地议题，并以成果展呈现青年投入社区发展协会事务的成果，带领青年以同理心换位思考在地发展，欢迎青年朋友组队参加，为社区议题一同激荡创新。</p>
-<figure id="attachment_13968882" aria-describedby="caption-attachment-13968882" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13968882-608450.jpg"><img class="size-large wp-image-13968882" src="https://i.epochtimes.com/assets/uploads/2023/04/id13968882-608450-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13968882" class="wp-caption-text">手拿板合照。（嘉义市政府提供）</figcaption></figure>
+<figure id="attachment_13968880" aria-describedby="caption-attachment-13968880" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13968880-608448.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-13968880" src="https://i.epochtimes.com/assets/uploads/2023/04/id13968880-608448-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13968880" class="wp-caption-text">市长黄敏惠观赏社区青年执行成果。（嘉义市政府提供）</figcaption></figure>
+<figure id="attachment_13968881" aria-describedby="caption-attachment-13968881" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13968881-608449.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-13968881" src="https://i.epochtimes.com/assets/uploads/2023/04/id13968881-608449-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13968881" class="wp-caption-text">市长黄敏惠观赏社区青年执行成果。（嘉义市政府提供）</figcaption></figure>
+<p>黄敏惠市长表示，“回嘉青年－FUN心玩社区”计划已经执行了两年，今年度将延续第一届与第二届洄嘉青年计划的精神，以及有事青年节理想，打造跨越青年文化交流平台，建立社区发展协会与在地青年连结，并关注更多在地议题，并以成果展呈现青年投入社区发展协会事务的成果，带领青年以同理心换位思考在地发展，欢迎青年朋友组队参加，为社区议题一同激荡创新。</p>
+<figure id="attachment_13968882" aria-describedby="caption-attachment-13968882" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13968882-608450.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-13968882" src="https://i.epochtimes.com/assets/uploads/2023/04/id13968882-608450-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13968882" class="wp-caption-text">手拿板合照。（嘉义市政府提供）</figcaption></figure>
 <p>黄敏惠市长表示，近年来市府持续推动青年政策五大主轴，包括多元培力、创新孵化、职涯就业、创业扶植及公共参与，“洄嘉青年”的核心是透过政府搭平台，在“年轻人”跟“社区”之间搭起桥梁，让政府政策、社区需求和青年创意能够结合，从认识社区、看到问题、提出解方，到凝聚共识后，共同推动在地服务。</p>
-<figure id="attachment_13968883" aria-describedby="caption-attachment-13968883" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13968883-608451.jpg"><img class="size-large wp-image-13968883" src="https://i.epochtimes.com/assets/uploads/2023/04/id13968883-608451-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13968883" class="wp-caption-text">启动仪式。（嘉义市政府提供）</figcaption></figure>
+<figure id="attachment_13968883" aria-describedby="caption-attachment-13968883" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13968883-608451.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-13968883" src="https://i.epochtimes.com/assets/uploads/2023/04/id13968883-608451-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13968883" class="wp-caption-text">启动仪式。（嘉义市政府提供）</figcaption></figure>
 <p>计划主持人云林科技大学文化资产维护系王新衡副教授表示，非常感谢嘉义市政府及各社区发展协会对在学的青年朋友们的包容与接纳，并在互相理解的过程中一起思考在地发展、一同成长，去年度计划不只报名踊跃，成果更是丰硕，希望今年的计划能再度为社区注入年轻的活水与能量，提升在地永续经营深度与广度。</p>
-<figure id="attachment_13968884" aria-describedby="caption-attachment-13968884" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13968884-608452.jpg"><img class="size-large wp-image-13968884" src="https://i.epochtimes.com/assets/uploads/2023/04/id13968884-608452-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13968884" class="wp-caption-text">兴仁社区青年团队以社区特色自创词曲，并邀请社区长者一起舞动，拍摄了一支专属于兴仁社区的MV《兴仁shock cool》。（嘉义市政府提供）</figcaption></figure>
+<figure id="attachment_13968884" aria-describedby="caption-attachment-13968884" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13968884-608452.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-13968884" src="https://i.epochtimes.com/assets/uploads/2023/04/id13968884-608452-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13968884" class="wp-caption-text">兴仁社区青年团队以社区特色自创词曲，并邀请社区长者一起舞动，拍摄了一支专属于兴仁社区的MV《兴仁shock cool》。（嘉义市政府提供）</figcaption></figure>
 <p>去年度评选成果第一的兴仁社区青年团队以社区特色自创词曲，并邀请社区长者一起舞动，拍摄了一支专属于兴仁社区的MV《兴仁shock cool》，青年团队翊传媒郭若晴表示，创作原先出发点只是想要介绍兴仁社区的特色，没想到在过程中凝聚起了社区的向心力，也更了解社区的历史等点点滴滴，感谢过程中曾经帮助过团队的许多人，学习到了很多。</p>
 <p>嘉义市政府社会处表示，去年度第二届提案踊跃，执行成果卓越，共有15组计划团队提案，执行的社区横跨嘉义市东、西两区，主题亦有社区绿美化、长者照护、乐龄运动、社区产业等等多元展现，如嘉义大学农艺系的团队在新店社区闲置农地种植香草植物，并带领社区民众从植物萃取精油再制作香草料理、防蚊液等等，尝试社区产业创新的可能性。</p>
 <p>中正大学团队在何庄社区活动中心建置了喘息咖啡馆空间，为“照护者”提供一个休憩的场域，考虑了长照议题中“照护者”的身心健康。</p>
 <p>兴仁社区则是社区青年自发参与，虽然皆就读于不同的学校，但本着对社区的爱与关怀，针对社区特色自创词曲，并邀请社区长者一起舞动，拍摄了一支仅属于兴仁社区的MV。各组成果皆丰富精彩，一时之间难以完全记载。</p>
 <p>本次“回嘉青年－FUN心玩社区”计划，亦期待透过本计划坚定青年参与社区事务的决心，并邀集社区发展协会的伙伴与在校青年团体参与，以达成青银共创社区事务的愿景。期待以青年创意为社区创造永续发展方向，偕同社区发展协会共同创造跨世代新价值。经评选核定通过的青年团队，提供总计80万元行动补助金，且于最终成果选拔优良团队，颁予奖励金总计达25万元。</p>
 <p>责任编辑：玉珍</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/7/11/n13778425.md#1">嘉市府邀“洄嘉青年”一同FUN心玩社区</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/6/n13966321.md#1">嘉义市监理站4月高龄换照 收到通知请来换照</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/7/n13967479.md#1">嘉义市世贤路“换春装” 限定落叶美景迎宾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/7/n13967690.md#1">【1000步的缤纷台湾】嘉义2间木质系民宿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/9/n13968838.md#1">《KANO》改编音乐剧日本盛大上演</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/9/n13968808.md#1">屏县斜坡乐团专辑《声之初 Nasi》获全球音乐奖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/9/n13968782.md#1">世界企鹅日 屏东海生馆推夜宿守护萌翻企鹅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/9/n13968775.md#1">诊间里的健身房  屏东荣总推运动医学</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/9/n13968762.md#1">火鸡肉饭名店探索路跑  逾千人共襄盛举</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/9/n13968694.md#1">屏东校园推动阅读有成   7校获奖肯定</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/11/n13778425.md#1">嘉市府邀“洄嘉青年”一同FUN心玩社区</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/6/n13966321.md#1">嘉义市监理站4月高龄换照 收到通知请来换照</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/7/n13967479.md#1">嘉义市世贤路“换春装” 限定落叶美景迎宾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/7/n13967690.md#1">【1000步的缤纷台湾】嘉义2间木质系民宿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308648.md#1">旅宿业新制将上路 嘉市府呼吁业者提早因应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308293.md#1">屏县府携手一卡通 用敬老卡助长者智慧生活</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308295.md#1">2421m的回声─阿里山林铁全线纪行 新书发表</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308279.md#1">2024亚太永续奖宜居城市   屏东非六都唯一获选</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308237.md#1">嘉市警体验营 萌警札根永续 正确交安观念</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308197.md#1">关山稻米达人选拔赛 吴承鸿连霸夺冠</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/13/n9951832.md#1" target="_blank">老绥远韩氏：文革酷刑实录</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11489263.md#1" target="_blank">伦敦盛大游行 34国法轮功学员吁停止迫害</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/7/n10283458.md#1" target="_blank">李庆霖“知青英雄”悲剧是如何造成的(上)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/6/n11571997.md#1" target="_blank">他们为我们的生活带来光明（1）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13959038.md#1">他说了什么好话 让阎王为他安排了大福分</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963576.md#1">狄仁杰为什么会有深藏不露的医疗绝技？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/5/n13965413.md#1">【未解之谜】海奥华预言（2）正在逼近的星球危机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963125.md#1">父亲托梦，援助大萧条时的委托人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963559.md#1">放弃复仇生善念  驼背康复</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/8/n13968218.md#1">【未解之谜】难以磨灭的爱恋 隔世再续前缘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/8/n13968405.md#1">【探索时分】M1艾布兰坦克装AI 无人战车到来？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/8/n13968352.md#1">【马克时空】阿海谈陆战队夜间如何作战</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/7/n13967692.md#1">习近平请马克龙广州故居品茶 专家揭其意图</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/7/n13967417.md#1">冯德莱恩当面提台湾 习近平放狠话 专家解读</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963296.md#1">【一线采访】看清中共 中国人加速出逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/7/n13967741.md#1">台湾知名电台主持人沈鸿元骤逝 享年49岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/6/n13966928.md#1">杨幂公开午餐菜单 显示瘦身不用挨饿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/6/n13966855.md#1">偕法国丈夫随马克龙访华 巩俐国籍问题引争议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/7/n13967762.md#1">汤唯偕韩国丈夫为父祝寿 女儿正面模样首曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/6/n13966909.md#1">陈慧琳义卖8千件二手衣物 疯抢场面一度失控</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963856.md#1">喝咖啡搭配运动减肥 这一时间燃脂更快</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949780.md#1">人体有70%的水 让“水汽”流动才不会生病</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/6/n13966458.md#1">旅馆员工分享最难忘的经验 千奇百怪都有</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/7/n13967323.md#1">穿越美国西部大草原</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/7/n13966978.md#1">肥胖惹人烦 中医师推荐无负担减肥法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308837.md#1">【探索时分】台湾拟采购鹰眼E2D 能否探测歼20？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308276.md#1">珍珠粉有助延缓衰老 改善睡眠 预防骨质疏松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308560.md#1">【车评】红章的“R” 2024 Honda Civic Type R</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308388.md#1">为何外国航空公司纷纷从中国撤出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议不轻松？中共党媒头版现异常?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308069.md#1">巴黎奥运世界各国总排名、台湾历届奥运奖牌榜一次看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308115.md#1">Netflix遭遇最严重的动画泄密盗版事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306576.md#1">蛋壳粉含丰富营养素 强健骨骼牙齿和护肤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">星巴克控必知 TOP7健康饮品及点餐5技巧</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/4/9/n13968878.htm">112年洄嘉青年FUN心玩社区计划启动暨说明</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/4/9/n13968878.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/4/9/n13968878.htm">112年洄嘉青年FUN心玩社区计划启动暨说明</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/4/9/n13968878.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
